Added Github actions workflow to push Storybook to GH-pages

--- a/package.json
+++ b/package.json
@@ -79,5 +79,5 @@
   "bugs": {
     "url": "https://github.com/galkremer1/react-skills-icons/issues"
   },
-  "homepage": "https://github.com/galkremer1/react-skills-icons#readme"
+  "homepage": "https://galkremer1.github.io/react-skills-icons"
 }
