--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-skills-icons",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A React component library for displaying skill icons",
   "type": "module",
   "main": "dist/index.js",
@@ -74,7 +74,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/galkremer1/react-skills-icons.git"
+    "url": "git+https://github.com/galkremer1/react-skills-icons.git"
   },
   "bugs": {
     "url": "https://github.com/galkremer1/react-skills-icons/issues"
