--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,32 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "jsx": "react",
+    "target": "ESNext",
     "module": "ESNext",
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
+    "jsx": "react-jsx",
     "declaration": true,
-    "declarationDir": "./dist/types",
+    "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "moduleResolution": "bundler",
+    "strict": true,
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "types": [
-      "react",
-      "react-dom",
-      "jest",
-      "@testing-library/jest-dom"
-    ],
-    "resolveJsonModule": true,
-    "isolatedModules": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
   "include": [
-    "src/**/*"
+    "src"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    "**/__tests__/**",
+    "**/*.test.ts",
     "**/*.test.tsx",
-    "**/*.stories.tsx"
+    "stories"
   ]
 }
